# Sample-Rest-api

./: .bazelrc  BUILD  MODULE.bazel
MyBookAPI/: main.go
MyBookAPI/MyUtilties/: getCsvData.go
